[tool.poetry]
name = "flumine"
version = "4.6.1"
description = "Flumine is a betting trading framework for Betfair."
authors = ["Nil <nil@example.com>"]

[project]
name = "flumine"
description = "Betting trading framework"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    { name = "Liam Pauling", email = "a@unknown.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "betfairlightweight[speed]==2.20.2",
    "tenacity==8.3.0",
    "python-json-logger==2.0.7",
    "requests",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "black==24.4.2",
    "coverage",
    "pre-commit",
    "pytz",
]

[project.urls]
Homepage = "https://github.com/betcode-org"
Documentation = "https://betcode-org.github.io/flumine/"
Repository = "https://github.com/betcode-org/flumine.git"
"Bug Tracker" = "https://github.com/betcode-org/flumine/issues"
Changelog = "https://github.com/betcode-org/flumine/blob/master/HISTORY.rst"

